[package]
name = "tunnelforge"
version = "0.3.0"
edition = "2021"
description = "Manage censorship bypass proxy tunnels with subscriptions and user limits"
license = "MIT"
repository = "https://github.com/alghanab/tunnelforge"
keywords = ["proxy", "v2ray", "xray", "vless", "censorship"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "tunnelforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
tabled = "0.15"
anyhow = "1"
thiserror = "2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
toml = "0.8"
dirs = "5"
regex = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
